NEWS - OpenPrinting CUPS Filters v1.11.2 - 2016-08-28
-----------------------------------------------------

CHANGES IN V1.11.3

	- cups-browsed: Treat discovered printers correctly also if
	  they use a non-standard port, even if several CUPS daemons
	  are running on the same server, on different ports. This
	  also improves the support of a sandboxed printing stack.
	- cups-browsed: Close http connections opened for polling
	  properties of IPP network printers, to fix a possible memory
	  leak.
	- cups-browsed: Cleaned up HTTP access to local and remote
	  CUPS servers and IPP printers, to assure that the local CUPS
	  daemon is always accessed the same (user-defined) way
	  (domain socket/localhost:port). Fixes Debian bug #832637.
	- cups-browsed: Fixed clustering equally-named queues of
	  different remote servers, to assure to have one master
	  referencing to all duplicates and noy a daisy chain of
	  duplicate references.

CHANGES IN V1.11.2

	- cups-browsed: Allow turning off the use of CUPS' domain
	  socket via cups-browsed.conf.
	- foomatic-rip: When run as regular CUPS filter use preferably
	  /etc/cups/foomatic-rip.conf (or whereever the CUPS
	  configuration files reside, according to the CUPS_SERVERROOT
	  environment variable) as configuration file. This way we can
	  more easily run the printing stack in a sandbox.
	- foomatic-rip: When run as regular CUPS filter, read the PPD
	  through CUPS and get the print queue name by environment
	  variable.
	- bannertopdf, foomatic-rip, gstoraster, mupdftoraster,
	  pdftoopvp, pdftoraster: Do not use build-time hard-coded
	  paths, but always the paths from the environment variables
	  which CUPS sets when calling its filters. This is needed to
	  run the printing stack in a sandbox.

CHANGES IN V1.11.1

	- mupdftoraster: Lowered the priority (raised the cost value)
	  in the cupsfilters-mupdf.convs file so that in a full
	  cups-filters installation MuPDF is not prioritized.

CHANGES IN V1.11.0
